En este avance creé el menú base completo con cada opción, esto con el ciclo while, luego creé todas las clases necesarias, clase película, sala y horario, cada uno con sus respectivos atributos y métodos, así como constructores y destructores, también creé los objetos pelicula que necesitaré más adelante

--- a/Cine2.0_Anddy_Prendas1.vcxproj
+++ b/Cine2.0_Anddy_Prendas1.vcxproj
@@ -129,9 +129,13 @@
   <ItemGroup>
     <ClCompile Include="Cine2.0_Anddy_Prendas1.cpp" />
     <ClCompile Include="Movie.cpp" />
+    <ClCompile Include="Room.cpp" />
+    <ClCompile Include="Schedule.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Movie.h" />
+    <ClInclude Include="Room.h" />
+    <ClInclude Include="Schedule.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
